welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: type mismatch;
 found   : Int
 required: java.awt.Color
      T(i+k)= i
              ^golomb:12: error: type mismatch;
 found   : java.awt.Color
 required: Int
  return T(j)
          ^